v1.4.1: hybrid webhook routing, per-action toggle, domain whitelist, embed redesign
- Hybrid webhook: custom URL on any server, fallback to Blocksmiths Base64 on authorized servers only
- Per-action sendWebhook toggle in action config (dynamic, not hardcoded)
- Domain whitelist: blocksmiths.net / blocksmp.net for fallback
- Embed: fields-only layout, dynamic colors by action type, configurable message count
- Fixed chat truncation: raw text truncated at 950 chars before code block wrap